--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ name = "tests"
 path = "tests/collection.rs"
 
 [dependencies]
-iced = "0.3.0"
+iced = { git = "https://github.com/yusdacra/iced.git", branch = "crust" }
 iced_focus_derive = { version = "0.1.0", optional = true }
 
 [dev-dependencies]
